<resources>
    <string name="app_name">StatQuiz</string>
    <string name="iniciar">Iniciar</string>
    <string name="D">D</string>
    <string name="C">C</string>
    <string name="B">B</string>
    <string name="A" />
    <string name="a">A</string>
    <string name="Question">question</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_categories">Categories</string>
    <string name="pontuacoes">Pontuações</string>
    <string name="category">Categorias</string>
</resources>
