<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Questions">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="563dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <TextView
            android:id="@+id/Questions"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="start|left"
            android:autoLink="all"
            android:background="#FFF"
            android:text="@string/Question"
            android:textAlignment="center"
            android:textColor="#393737"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/OptionA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/OptionB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/B"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/OptionC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/C"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/OptionD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/D"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="20sp"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <!--<Button-->
    <!--android:id="@+id/play_button"-->
    <!--android:layout_width="200dp"-->
    <!--android:layout_height="200dp"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_margin="16dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:foreground="?attr/selectableItemBackground"-->
    <!--android:onClick="onClick"-->
    <!--android:text="Jogar"-->
    <!--android:textColor="#000"-->
    <!--android:textSize="40dp"-->
    <!--android:visibility="visible"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.497"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.419" />-->

    <Button
        android:id="@+id/play_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_option"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/iniciar"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="283dp"
        android:layout_height="163dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@android:color/transparent" />
</android.support.constraint.ConstraintLayout>